--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="../Photos/PHOTO-2024-07-18-23-38-45-removebg-preview.png" alt="Logo AESM" width="200">
+            <img src="Photos/PHOTO-2024-07-18-23-38-45-removebg-preview.png" alt="Logo AESM" width="200">
         </div>
         </div>
         <h1>Contactez-nous</h1>
