--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- En-tête -->
     <header>
         <div class="logo">
-            <img src="../Photos/PHOTO-2024-07-18-23-38-45-removebg-preview.png" alt="Logo AESM" width="500">
+            <img src="PHOTO-2024-07-18-23-38-45-removebg-preview.png" alt="Logo AESM" width="500">
         </div>
         <h1>Bienvenue à l'AESM</h1>
         <nav>
@@ -106,9 +106,9 @@
 
         <h3>Galerie photo </h3>
         <div class="gallery">
-            <img src="../Photos/a96458eb-f003-4914-9fff-7c050bb909ca.JPG" alt="Événement 1">
-            <img src="../Photos/IMG_0841.jpg" alt="Événement 3">
-            <img src="../Photos/IMG_0842.jpg" alt="Événement 2">
+            <img src="a96458eb-f003-4914-9fff-7c050bb909ca.JPG" alt="Événement 1">
+            <img src="IMG_0841.jpg" alt="Événement 3">
+            <img src="IMG_0842.jpg" alt="Événement 2">
            
         </div>
     </section>
@@ -145,17 +145,17 @@
         <ul>
             <li>
                 <a href="https://www.instagram.com/aesmetz/?igsh=enFueDQzMnk2ZG1j&utm_source=qr" target="_blank">
-                    <img src="../Photos/logo-instagram-jpg.jpg" alt="Instagram" width="32" height="32">
+                    <img src="logo-instagram-jpg.jpg" alt="Instagram" width="32" height="32">
                 </a>
             </li>
             <li>
                 <a href="https://www.tiktok.com/@aesmetz?_t=ZN-8uXeVrQe4dK&_r=1" target="_blank">
-                    <img src="../Photos/logo-png-tiktok.jpg" alt="TikTok" width="32" height="32">
+                    <img src="logo-png-tiktok.jpg" alt="TikTok" width="32" height="32">
                 </a>
             </li>
             <li>
                 <a href="https://www.youtube.com/@AESMETZ" target="_blank">
-                    <img src="../Photos/logo-de-youtube.png" alt="YouTube" width="32" height="32">
+                    <img src="logo-de-youtube.png" alt="YouTube" width="32" height="32">
                 </a>
             </li>
         </ul>
