--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="Photos/PHOTO-2024-07-18-23-38-45-removebg-preview.png" alt="Logo AESM" width="200">
+            <img src="PHOTO-2024-07-18-23-38-45-removebg-preview.png" alt="Logo AESM" width="200">
         </div>
         </div>
         <h1>Contactez-nous</h1>
@@ -72,17 +72,17 @@
         <ul>
             <li>
                 <a href="https://www.instagram.com/aesmetz/?igsh=enFueDQzMnk2ZG1j&utm_source=qr" target="_blank">
-                    <img src="../Photos/logo-instagram-jpg.jpg" alt="Instagram" width="32" height="32">
+                    <img src="logo-instagram-jpg.jpg" alt="Instagram" width="32" height="32">
                 </a>
             </li>
             <li>
                 <a href="https://www.tiktok.com/@aesmetz?_t=ZN-8uXeVrQe4dK&_r=1" target="_blank">
-                    <img src="../Photos/logo-png-tiktok.jpg" alt="TikTok" width="32" height="32">
+                    <img src="logo-png-tiktok.jpg" alt="TikTok" width="32" height="32">
                 </a>
             </li>
             <li>
                 <a href="https://www.youtube.com/@AESMETZ" target="_blank">
-                    <img src="../Photos/logo-de-youtube.png" alt="YouTube" width="32" height="32">
+                    <img src="logo-de-youtube.png" alt="YouTube" width="32" height="32">
                 </a>
             </li>
         </ul>
