--- a/index.html
+++ b/index.html
@@ -70,16 +70,20 @@
         <h3>L’équipe</h3>
         <div class="team-grid">
             <div class="team-member">
-                <img src="Photos/vice-president.jpg" alt="Vice-président">
-                <p><strong>Vice-présidente :</strong> Khoudia Sow Tall Dioum</p>
+                <img src="PHOTO-2025-03-11-15-57-52.jpg" alt="Vice-président">
+                <p><strong>Vice-présidente :</strong><br> Dioum Khoudia Sow Tall</p>
             </div>
             <div class="team-member">
                 <img src="Photos/president.jpg" alt="Président">
-                <p><strong>Président :</strong> Mamadou Seye</p>
+                <p><strong>Président :</strong><br> Seye Mamadou</p>
             </div>
             <div class="team-member">
-                <img src="Photos/tresorier.jpg" alt="Trésorier">
-                <p><strong>Trésoriere :</strong> Atta Gueye</p>
+                <img src="49d410bf-b4b9-4752-95e1-48daf52a1ea6.jpg" alt="Trésorier">
+                <p><strong>Trésoriere :</strong><br>Sarr Adja Tabara</p>
+            </div>
+            <div class="team-member">
+                <img src="Photos/tresorier.jpg" alt="Secrétaire General">
+                <p><strong>Secrétaire General :</strong><br>Mbengue Adama</p>
             </div>
         </div>
 
@@ -87,7 +91,20 @@
         <p>
             Nous remercions nos partenaires et sponsors pour leur soutien : ASM (Association des Sénégalais de Moselle), Lemfi.
         </p>
-
+     <!-- Section Mot du président -->
+    <div class="president-message">
+        <div class="president-photo">
+            <img src="d1a48d6d-c006-4075-9beb-6a8810f98c40.jpg" alt="Président">
+        </div>
+        <div class="president-text">
+            <h3>Mot du Président</h3>
+            <blockquote>
+                "Chers membres et sympathisants de l'AESM,<br><br>
+                C'est avec fierté que je m'adresse à vous aujourd'hui pour partager notre vision commune 
+                d'une communauté estudiantine unie et solidaire. Votre engagement est notre force motrice..."
+            </blockquote>
+        </div>
+    </div>
         <h4>Réalisations</h4>
         <p>
             Ce site a été réalisé par les membres de l'AESM.
