--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
         <h3>Partenaires et sponsors</h3>
         <p>
-            Nous remercions nos partenaires et sponsors pour leur soutien : ASM (Association des Sénégalais de Moselle), Lemfi.
+            Nous remercions nos partenaires et sponsors pour leur soutien : ASM (Association des Sénégalais de Moselle), Lemfi (Code promo: Aesmetz57..
         </p>
      <!-- Section Mot du président -->
     <div class="president-message">
