--- a/index.html
+++ b/index.html
@@ -127,10 +127,32 @@
             </div>
         </div>
 
-        <h3>Partenaires et sponsors</h3>
-        <p>
-            Nous remercions nos partenaires et sponsors pour leur soutien : ASM (Association des Sénégalais de Moselle), Lemfi (Code promo: Aesmetz57).
-        </p>
+       <div class="partners-section">
+            <h3>Partenaires et sponsors</h3>
+            <div class="partners-grid">
+                <!-- Partenaire 1 -->
+                <div class="partner-card">
+                    <div class="partner-image">
+                        <img src="IMG_1F279CE6DCDB-1.jpeg" alt="ASM">
+                        <div class="partner-text">
+                            <h4>ASM</h4>
+                            <p>Association des Sénégalais de Moselle</p>
+                        </div>
+                    </div>
+                </div>
+        
+                <!-- Partenaire 2 -->
+                <div class="partner-card">
+                    <div class="partner-image">
+                        <img src="PHOTO-2025-03-11-21-10-51.jpg" alt="Événement Lemfi">
+                        <div class="partner-text">
+                            <h4>Lemfi</h4>
+                            <p>Code promo: Aesmetz57</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
             <!-- Section Mot du président -->
     <div class="president-message">
         <div class="president-photo">
