--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
 
         <h3>Histoire et origine de l’association</h3>
         <p>
-            L'AESM (Association des Étudiants Sénégalais de Metz) a été créé en 2018 par un groupe d'étudiants sénégalais désireux de se rassembler, de s'entraider et de promouvoir la culture sénégalaise au sein de la communauté universitaire de Metz. Depuis sa création, l'association n'a cessé de grandir et de se développer, accueillant de nouveaux membres et organisant de nombreux événements et activités pour ses adhérents. Aujourd'hui, l'AESM est devenue une référence incontournable pour les étudiants sénégalais de Metz, qui y trouvent un espace d'échange, de partage et de convivialité.
+           L’Association des Étudiants Sénégalais de Metz (AESM) a été fondée le 19 juin 1993 avec pour mission de maintenir les liens entre les étudiants du campus Bridoux, de coordonner les activités de ses membres et d’organiser diverses manifestations. (Source : Tribunal judiciaire de Metz)  
+
+À ses débuts, l’association réunissait les étudiants sénégalais et mauritaniens de Metz. Quelques années plus tard, elle prit le nom d’Association des Étudiants Sénégalais de Metz et se fixa pour objectif principal la défense des intérêts matériels et moraux de l’ensemble des étudiants sénégalais, ainsi que la promotion de la culture sénégalaise à travers ses événements.
         </p>
 
         <h3>L’équipe</h3>
