--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </div>
 
        <div class="partners-section">
-            <h3>Partenaires et sponsors</h3>
+            <h3>Collaborateur et sponsors</h3>
             <div class="partners-grid">
                 <!-- Partenaire 1 -->
                 <div class="partner-card">
