--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,9 @@
             <button type="submit" class="submit-button">
                 <i class="fas fa-paper-plane"></i> Envoyer
             </button>
+            <p id="confirmation-message" style="display: none; color: green; font-weight: bold;">
+                Merci ! Votre message a bien été envoyé.
+            </p>
         </form>
     </section>
 
