--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <p><strong>Trésoriere :</strong><br>Sarr Adja Tabara</p>
             </div>
             <div class="team-member">
-                <img src="Photos/tresorier.jpg" alt="Secrétaire General">
+                <img src="89726b7d-b067-4d74-ac09-86fc7202e1a9.jpg" alt="Secrétaire General">
                 <p><strong>Secrétaire General :</strong><br>Mbengue Adama</p>
             </div>
         </div>
