--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
   
       <!-- Événement 2 -->
       <div class="event">
-        <h3>Korite 13/04/2024</h3>
+        <h3>Korite </h3>
         <div class="gallery-container">
           <div class="visible-gallery">
             <img src="event2-photo1.jpg" alt="Photo 1 du Ndogou">
@@ -208,7 +208,7 @@
   
       <!-- Événement 3 -->
       <div class="event">
-        <h3>Picnic : Picnic - 08/08/2024</h3>
+        <h3>Picnic </h3>
         <div class="gallery-container">
           <div class="visible-gallery">
             <img src="P14.jpg" alt="Photo 1 du Picnic">
