--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
     </div>
   </section>
 
-  <!-- Section Événements -->
-  <section id="events">
+ <!-- Section Événements -->
+<section id="events">
     <h2>Événements</h2>
     
     <div class="events-container">
@@ -174,33 +174,63 @@
             <img src="13.jpg" alt="Photo 13 de l'événement">
             <img src="14.jpg" alt="Photo 14 de l'événement">
           </div>
-          <!-- Bouton Voir plus -->
           <button class="voir-plus" aria-expanded="false">Voir plus de photos</button>
         </div>
       </div>
   
       <!-- Événement 2 -->
       <div class="event">
-        <h3>Korite </h3>
+        <h3>Assemblée General 2024</h3>
         <div class="gallery-container">
           <div class="visible-gallery">
-            <img src="event2-photo1.jpg" alt="Photo 1 du Ndogou">
-            <img src="event2-photo2.jpg" alt="Photo 2 du Ndogou">
-            <img src="event2-photo3.jpg" alt="Photo 3 du Ndogou">
+            <img src="ab16.jpg" alt="Photo 1 du Ndogou">
+            <img src="ab44.jpg" alt="Photo 2 du Ndogou">
+            <img src="ab8.jpg" alt="Photo 3 du Ndogou">
           </div>
           <div class="hidden-gallery">
-            <img src="event2-photo4.jpg" alt="Photo 4 du Ndogou">
-            <img src="event2-photo5.jpg" alt="Photo 5 du Ndogou">
-            <img src="event2-photo6.jpg" alt="Photo 6 du Ndogou">
-            <img src="event2-photo4.jpg" alt="Photo 4 du Ndogou">
-            <img src="event2-photo5.jpg" alt="Photo 5 du Ndogou">
-            <img src="event2-photo6.jpg" alt="Photo 6 du Ndogou">
-            <img src="event2-photo4.jpg" alt="Photo 4 du Ndogou">
-            <img src="event2-photo5.jpg" alt="Photo 5 du Ndogou">
-            <img src="event2-photo6.jpg" alt="Photo 6 du Ndogou">
-            <img src="event2-photo4.jpg" alt="Photo 4 du Ndogou">
-            <img src="event2-photo5.jpg" alt="Photo 5 du Ndogou">
-            <img src="event2-photo6.jpg" alt="Photo 6 du Ndogou">
+            <!-- Liste des photos sans chemin -->
+            <img src="ab1.jpg" alt="Photo Assemblée 1">
+            <img src="ab2.jpg" alt="Photo Assemblée 2">
+            <img src="ab3.jpg" alt="Photo Assemblée 3">
+            <img src="ab4.jpg" alt="Photo Assemblée 4">
+            <img src="ab5.jpg" alt="Photo Assemblée 5">
+            <img src="ab6.jpg" alt="Photo Assemblée 6">
+            <img src="ab7.jpg" alt="Photo Assemblée 7">
+            <img src="ab9.jpg" alt="Photo Assemblée 9">
+            <img src="ab10.jpg" alt="Photo Assemblée 10">
+            <img src="ab11.jpg" alt="Photo Assemblée 11">
+            <img src="ab12.jpg" alt="Photo Assemblée 12">
+            <img src="ab13.jpg" alt="Photo Assemblée 13">
+            <img src="ab14.jpg" alt="Photo Assemblée 14">
+            <img src="ab15.jpg" alt="Photo Assemblée 15">
+            <img src="ab17.jpg" alt="Photo Assemblée 17">
+            <img src="ab18.jpg" alt="Photo Assemblée 18">
+            <img src="ab19.jpg" alt="Photo Assemblée 19">
+            <img src="ab20.jpg" alt="Photo Assemblée 20">
+            <img src="ab21.jpg" alt="Photo Assemblée 21">
+            <img src="ab22.jpg" alt="Photo Assemblée 22">
+            <img src="ab23.jpg" alt="Photo Assemblée 23">
+            <img src="ab24.jpg" alt="Photo Assemblée 24">
+            <img src="ab25.jpg" alt="Photo Assemblée 25">
+            <img src="ab26.jpg" alt="Photo Assemblée 26">
+            <img src="ab27.jpg" alt="Photo Assemblée 27">
+            <img src="ab28.jpg" alt="Photo Assemblée 28">
+            <img src="ab29.jpg" alt="Photo Assemblée 29">
+            <img src="ab30.jpg" alt="Photo Assemblée 30">
+            <img src="ab31.jpg" alt="Photo Assemblée 31">
+            <img src="ab32.jpg" alt="Photo Assemblée 32">
+            <img src="ab33.jpg" alt="Photo Assemblée 33">
+            <img src="ab34.jpg" alt="Photo Assemblée 34">
+            <img src="ab35.jpg" alt="Photo Assemblée 35">
+            <img src="ab36.jpg" alt="Photo Assemblée 36">
+            <img src="ab38.jpg" alt="Photo Assemblée 38">
+            <img src="ab39.jpg" alt="Photo Assemblée 39">
+            <img src="ab40.jpg" alt="Photo Assemblée 40">
+            <img src="ab41.jpg" alt="Photo Assemblée 41">
+            <img src="ab42.jpg" alt="Photo Assemblée 42">
+            <img src="ab43.jpg" alt="Photo Assemblée 43">
+            <img src="ab45.jpg" alt="Photo Assemblée 45">
+            <img src="ab46.jpg" alt="Photo Assemblée 46">
           </div>
           <button class="voir-plus" aria-expanded="false">Voir plus de photos</button>
         </div>
@@ -208,7 +238,7 @@
   
       <!-- Événement 3 -->
       <div class="event">
-        <h3>Picnic </h3>
+        <h3>Picnic</h3>
         <div class="gallery-container">
           <div class="visible-gallery">
             <img src="P14.jpg" alt="Photo 1 du Picnic">
@@ -233,9 +263,40 @@
           <button class="voir-plus" aria-expanded="false">Voir plus de photos</button>
         </div>
       </div>
-    </div>
-  </section>
   
+      <!-- Événement 4 -->
+      <div class="event">
+        <h3>Soirée d'intégration (12/2024)</h3>
+        <div class="gallery-container">
+          <div class="visible-gallery">
+            <img src="c10.jpg" alt="Photo 5 de l'événement">
+            <img src="c12.jpg" alt="Photo 2 de l'événement">
+            <img src="c18.jpg" alt="Photo 3 de l'événement">
+          </div>
+          <div class="hidden-gallery">
+            <img src="c1.jpg" alt="Photo événement 1">
+            <img src="c2.jpg" alt="Photo événement 2">
+            <img src="c3.jpg" alt="Photo événement 3">
+            <img src="c4.jpg" alt="Photo événement 4">
+            <img src="c5.jpg" alt="Photo événement 5">
+            <img src="c6.jpg" alt="Photo événement 6">
+            <img src="c7.jpg" alt="Photo événement 7">
+            <img src="c8.jpg" alt="Photo événement 8">
+            <img src="c9.jpg" alt="Photo événement 9">
+            <img src="c11.jpg" alt="Photo événement 11">
+            <img src="c13.jpg" alt="Photo événement 13">
+            <img src="c14.jpg" alt="Photo événement 14">
+            <img src="c15.jpg" alt="Photo événement 15">
+            <img src="c16.jpg" alt="Photo événement 16">
+            <img src="c17.jpg" alt="Photo événement 17">
+            <img src="c19.jpg" alt="Photo événement 19">
+          </div>
+          <button class="voir-plus" aria-expanded="false">Voir plus de photos</button>
+        </div>
+      </div>
+    </div>
+</section>
+
   <!-- Section Actualités / Blog -->
   <section id="news">
     <h2>Actualités / Blog</h2>
