--- a/index.html
+++ b/index.html
@@ -484,5 +484,13 @@
       });
     });
   </script>
+   <script>
+        document.addEventListener("contextmenu", (event) => event.preventDefault()); // Désactive le clic droit
+        document.addEventListener("keydown", (event) => {
+            if (event.ctrlKey && (event.key === "u" || event.key === "s" || event.key === "i" || event.key === "j")) {
+                event.preventDefault(); // Empêche Ctrl+U, Ctrl+S, Ctrl+Shift+I, Ctrl+Shift+J
+            }
+        });
+    </script>
 </body>
 </html>
