--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
     <ul>
       <li>
         <a href="https://www.instagram.com/aesmetz/?igsh=enFueDQzMnk2ZG1j&utm_source=qr" target="_blank">
-          <img src="logo-instagram-jpg.jpg" alt="Instagram" width="32" height="32">
+          <img src="logo-instagram-jpg.png" alt="Instagram" width="32" height="32">
         </a>
       </li>
       <li>
