--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <p><strong>Vice-présidente :</strong><br> Dioum Khoudia Sow Tall</p>
       </div>
       <div class="team-member">
-        <img src="president.jpg" alt="Président">
+        <img src="presi.jpg" alt="Président">
         <p><strong>Président :</strong><br> Seye Mamadou</p>
       </div>
       <div class="team-member">
