--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>AESM - Association</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="icon" type="image/png" href="MICROLOGO.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="MICROLOGO.png">
+
 </head>
 <body>
   <!-- En-tête -->
