--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
         <!-- Partenaire 5 -->
         <div class="partner-card">
           <div class="partner-image">
-            <img src="Dahira.jpeg" alt="Dahira Mouride de Metz">
+            <img src="PHOTO-2025-03-19-13-34-17.jpg" alt="Dahira Mouride de Metz">
             <div class="partner-text">
               <h4>Dahira Mouride de Metz</h4>
               <p></p>
