--- a/contact.html
+++ b/contact.html
@@ -156,10 +156,10 @@
             modalContent.innerHTML = `
                 <h3 style="margin-bottom: 1.5rem;">Veuillez sélectionner votre localisation</h3>
                 <button id="ouiBtn" style="margin-right: 1rem; padding: 10px 20px; background: #4CAF50; color: white; border: none; border-radius: 5px; cursor: pointer;">
-                    Oui, je suis en Europe
+                    Je suis en Europe
                 </button>
                 <button id="nonBtn" style="padding: 10px 20px; background: #0f056b; color: white; border: none; border-radius: 5px; cursor: pointer;">
-                    Non, je suis en Afrique
+                    Je suis en Afrique
                 </button>
             `;
     
