--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="../Photos/PHOTO-2024-07-18-23-38-45-removebg-preview.png" alt="Logo AESM" width="200">
+            <img src="PHOTO-2024-07-18-23-38-45-removebg-preview.png" alt="Logo AESM" width="200">
         </div>
         <h1>Contactez-nous</h1>
         <nav>
@@ -25,7 +25,8 @@
         <h2>Formulaire de contact</h2>
         
         <div id="form-europe" style="display: none;">
-            <form action="https://formspree.io/f/xpwpzajw" method="POST" class="modern-form" enctype="multipart/form-data">
+           <form action="https://formsubmit.co/aesmetz.etu@gmail.com" method="POST" class="modern-form" enctype="multipart/form-data">
+                <input type="hidden" name="_cc" value="aesmetz221@gmail.com">
                 <div class="form-group">
                     <label for="nom"><i class="fas fa-user"></i> Nom :</label>
                     <input type="text" id="nom" name="nom" required>
