--- a/contact.html
+++ b/contact.html
@@ -135,6 +135,52 @@
             </form>
         </div> 
     </section>
+    <!-- Section Faire un don -->
+  <section id="don">
+    <h2>Faire un don</h2>
+    <p>
+      Soutenez l'AESM en faisant un don via HelloAsso. Votre contribution nous aide à réaliser nos projets et à soutenir nos activités.
+    </p>
+    <a href="https://www.helloasso.com/associations/association-des-etudiants-senegalais-de-metz/formulaires/1" target="_blank" class="don-button">Faire un don</a>
+  </section>
+
+  <!-- Section Contact -->
+  <section id="contact">
+    <h2>Contactez-nous</h2>
+    <p>Pour nous contacter, veuillez cliquer sur le bouton ci-dessous :</p>
+    <a href="contact.html" target="_blank" class="don-button">Accéder au formulaire de contact</a>
+  </section>
+  <p>
+    Ce site a été réalisé par les membres de l'AESM.
+  </p>
+  <!-- Pied de page -->
+  <footer>
+    <h3>Suivez-nous sur nos réseaux sociaux :</h3>
+    <ul>
+      <li>
+        <a href="https://www.instagram.com/aesmetz/?igsh=enFueDQzMnk2ZG1j&utm_source=qr" target="_blank">
+          <img src="logo-instagram-jpg.png" alt="Instagram" width="32" height="32">
+        </a>
+      </li>
+      <li>
+        <a href="https://www.tiktok.com/@aesmetz?_t=ZN-8uXeVrQe4dK&_r=1" target="_blank">
+          <img src="logo-png-tiktok.jpg" alt="TikTok" width="32" height="32">
+        </a>
+      </li>
+      <li>
+        <a href="https://www.youtube.com/@AESMETZ" target="_blank">
+          <img src="logo-de-youtube.png" alt="YouTube" width="32" height="32">
+        </a>
+      </li>
+    </ul>
+  </footer>
+  
+  <!-- Lightbox -->
+  <div id="lightbox" class="lightbox">
+    <span class="close">&times;</span>
+    <img class="lightbox-content" id="lightbox-img" src="" alt="">
+  </div>
+  
 
     <script>
         document.addEventListener("DOMContentLoaded", function () {
