--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@
   </p>
   <!-- Pied de page -->
   <footer>
+    <p>© 2025 AESM - Tous droits réservés</p>
     <h3>Suivez-nous sur nos réseaux sociaux :</h3>
     <ul>
       <li>
