--- a/contact.html
+++ b/contact.html
@@ -156,7 +156,7 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="agence"><i class="fas fa-building"></i> Agence :</label>
+                    <label for="agence"><i class="fas fa-building"></i> Vous etes passé par une agence ? </label>
                     <select id="agence" name="agence" required>
                         <option value="oui">Oui</option>
                         <option value="non">Non</option>
@@ -167,14 +167,14 @@
                     <input type="text" id="agence_nom" name="agence_nom">
                 </div>
                 <div class="form-group">
-                    <label for="garant"><i class="fas fa-user-shield"></i> Garant :</label>
+                    <label for="garant"><i class="fas fa-user-shield"></i> Vous avez un garant ?</label>
                     <select id="garant" name="garant" required>
                         <option value="oui">Oui</option>
                         <option value="non">Non</option>
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="hebergeur"><i class="fas fa-home"></i> Hébergeur :</label>
+                    <label for="hebergeur"><i class="fas fa-home"></i> Vous avez un hébergeur ?</label>
                     <select id="hebergeur" name="hebergeur" required>
                         <option value="oui">Oui</option>
                         <option value="non">Non</option>
