--- a/contact.html
+++ b/contact.html
@@ -149,14 +149,14 @@
                     <input type="tel" id="telephone" name="telephone" placeholder="+221 XX XXX XX XX" required>
                 </div>
                 <div class="form-group">
-                    <label for="acceptation"><i class="fas fa-check"></i> Acceptation :</label>
+                    <label for="acceptation"><i class="fas fa-check"></i> Avez vous une acceptation ?</label>
                     <select id="acceptation" name="acceptation" required>
                         <option value="oui">Oui</option>
                         <option value="non">Non</option>
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="agence"><i class="fas fa-building"></i> Vous etes passé par une agence ? </label>
+                    <label for="agence"><i class="fas fa-building"></i> Etes vous passés par une agence ? </label>
                     <select id="agence" name="agence" required>
                         <option value="oui">Oui</option>
                         <option value="non">Non</option>
