--- a/index.html
+++ b/index.html
@@ -297,6 +297,40 @@
           <button class="voir-plus" aria-expanded="false">Voir plus de photos</button>
         </div>
       </div>
+
+      <div class="events-container">
+  <!-- Événement 5 -->
+  <div class="event">
+    <h3>Korité 2025</h3>
+    <div class="gallery-container">
+      <!-- Premières 3 photos visibles -->
+      <div class="visible-gallery">
+        <img src="K6.JPG" alt="Photo de l'événement K6">
+        <img src="K12.JPG" alt="Photo de l'événement K12">
+        <img src="K9.JPG" alt="Photo de l'événement K9">
+      </div>
+      <!-- Galerie cachée avec les autres photos en ordre aléatoire -->
+      <div class="hidden-gallery">
+        <img src="K4.JPG" alt="Photo de l'événement K4">
+        <img src="K7.JPG" alt="Photo de l'événement K7">
+        <img src="K1.JPG" alt="Photo de l'événement K1">
+        <img src="K17.JPG" alt="Photo de l'événement K17">
+        <img src="K11.JPG" alt="Photo de l'événement K11">
+        <img src="K3.JPG" alt="Photo de l'événement K3">
+        <img src="K14.JPG" alt="Photo de l'événement K14">
+        <img src="K8.JPG" alt="Photo de l'événement K8">
+        <img src="K2.JPG" alt="Photo de l'événement K2">
+        <img src="K15.JPG" alt="Photo de l'événement K15">
+        <img src="K13.JPG" alt="Photo de l'événement K13">
+        <img src="K10.JPG" alt="Photo de l'événement K10">
+        <img src="K16.JPG" alt="Photo de l'événement K16">
+        <img src="K5.JPG" alt="Photo de l'événement K5">
+      </div>
+    </div>
+    <button class="voir-plus" aria-expanded="false">Voir plus de photos</button>
+  </div>
+</div>
+
     </div>
 </section>
 
