--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
                         <img src="ag16.jpg" alt="AG 16">
                         <img src="ag17.jpg" alt="AG 17">
                         <img src="ag18.jpg" alt="AG 18">
+                        <img src="ag19.jpg" alt="AG 19">
                     </div>
                     <button class="voir-plus" aria-expanded="false">Voir plus de photos</button>
                 </div>
